--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -8,13 +8,6 @@ src: url('assets/librairie/glyphicons-halflings-regular.svg') format('svg');
 font-weight: normal;
 font-style: normal;
 }
-
-/*.container {
-  padding-right: 0px;
-  padding-left: 0px;
-  margin-right: 0px;
-  margin-left: 0px;
-}*/
 .presentation{
   height: 15em;
   background-color: green;
@@ -78,9 +71,6 @@ h3, h4{
   color: lightblue;
   z-index: 100;
 }
-/*.comp_pers{
-  width: 100%;
-}*/
 .head_pres{
   font-weight: bold;
   font-size: 1em;
@@ -89,15 +79,13 @@ h3, h4{
   color: white;
 
 }
-#gros_pd{
+#couv_img{
   background-image: url('../images/portee2_1.png');
-  /*margin-top: 10px;*/
   height: 200px;
   background-repeat: round;
   background-size: cover;
 
 }
-
 .note{
   height: 30em;
 }
@@ -107,19 +95,12 @@ h3, h4{
   padding: 0px;
   margin: 0px;
 }
-
 input{
   height: 100%;
   width: 100%;
   box-sizing: padding-box;
   box-shadow: inset 0 0 1em gold, 0 0 1em #DA4642;
 }
-/*button{
-  /*height: 100%;
-  width: 100%;
-  box-sizing: padding-box;
-  box-shadow: 2em 9em 6em gold;
-}*/
 .pleine{
   height: inherit;
   box-sizing: content-box;
@@ -150,18 +131,15 @@ input{
 .pleine{
   position: relative;
 }
-
 #black{
   margin-top: -420px;
   height: 20em;
 }
-.connard{
+.bloc_link{
   height: 20em;
-
 }
 .present{
   height: inherit;
-
 }
 .experience{
   height: inherit;
@@ -169,20 +147,10 @@ input{
 .contact{
   height: inherit;
 }
-
 .granpad{
   border: solid collapse;
   height: 9em;
 }
-/*ul {
-    list-style-type: none;
-  /*  margin: 0;
-    padding: 0;*/
-    overflow: hidden;
-    /*background-image:linear-gradient(to right, gold, white);*/
-
-}
-
 li {
     float: left;
 }
@@ -195,13 +163,10 @@ li  {
     text-decoration: none;
     color: black;
 }
-
-/* Change the link color to #111 (black) on hover */
 li:hover {
     background-color: grey;
   }
   body{
-    /*background-image:linear-gradient(to right, grey, grey);*/
     background-image: url("../images/studio_6.jpg");
     background-repeat: repeat;
     font-family: 'Play', sans-serif;
@@ -222,9 +187,6 @@ li:hover {
   }
   .content_competence li:hover {
     background-color: #5cb85c;
-    /*float: left;*/
-
-
   }
   .content_competence ul {
     border-left: solid #5cb85c 1px;
@@ -245,11 +207,9 @@ li:hover {
   .content_experience h4{
     color: darkgrey;
   }
-
   .content_contact{
     background-color: #31B0D5;
     align-content: center;
-
   }
   .content_contact ul li{
     margin: 10px;
@@ -261,7 +221,6 @@ li:hover {
   .contacts{
     border-left: solid #9AFFEF 1px ;
   }
-
   .content_loisir{
     background-color: #EC971F;
     align-content: center;
@@ -271,7 +230,6 @@ li:hover {
     display: flex;
     flex-direction: row;
     width: 100%;
-
   }
   .loisir ul{
     display: flex;
@@ -348,7 +306,6 @@ li:hover {
   .contenant{
     margin-left: 10px;
     margin-right: 30px;
-
   }
   #cheval{
     height: 200px;
@@ -383,8 +340,7 @@ li:hover {
       border: dotted 5px black;
       margin-top: 0px;
     }
-    #gros_pd{
-      background-image: url('images/portee2_1.png');
+    #couv_img{
       margin-top: 10px;
       height: 100px;
       background-repeat: round;
@@ -412,7 +368,6 @@ li:hover {
     top: 30px;
     font-size: 10px;
   }
-
 }
      img {
       -moz-transition-duration:4.0s;
